[tool.poetry]
name = "python-glowplug"
version = "0.1.0"
description = ""
authors = ["Joe Nudell <jnudell@hks.harvard.edu>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
